--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "fit_truck",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/default/icon.png",
+    "icon": "./src/assets/app/AppIcon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./src/assets/default/splash-icon.png",
+      "image": "./src/assets/app/AppIcon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -17,12 +17,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/default/adaptive-icon.png",
+        "foregroundImage": "./src/assets/app/AppIcon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.fit_truck"
     },
     "web": {
-      "favicon": "./src/assets/default/favicon.png"
+      "favicon": "./src/assets/app/AppIcon.png"
     }
   }
 }
